examples/good/lambdas/01_instant_eval.lk
int main() {
    print(
        string :: (a :: string, b :: string) -> { return a + " " + b;  }("Hello", "World")
    );
}