examples/bad/typechecker/wrong_argument.lk
int main() {
    print(
        string :: (a :: int, b :: int) -> { return cast(string) (a+b); }("Hello", "World")
    );
}